--- a/wp7-donor/Donor/NewsList.xaml
+++ b/wp7-donor/Donor/NewsList.xaml
@@ -55,7 +55,11 @@
 
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
 
-            <ListBox Margin="0,15,-12,0" ItemsSource="{Binding News.Items}" SelectionChanged="ListBox_SelectionChanged" Tap="ListBox_Tap" tilteffect:TiltEffect.IsTiltEnabled="True">
+            <ListBox Margin="0,15,-12,0"
+                     ItemsSource="{Binding Path=News.Items}"
+                     DataContext="{Binding Main, Source={StaticResource Locator}}" 
+                     Tap="ListBox_Tap" 
+                     tilteffect:TiltEffect.IsTiltEnabled="True">
                 <ListBox.ItemTemplate>
                     <DataTemplate>
                         <StackPanel Margin="0,10,0,17" Width="432">
