--- a/wp7-donor/Donor/NewsPage.xaml
+++ b/wp7-donor/Donor/NewsPage.xaml
@@ -15,7 +15,9 @@
     FontSize="{StaticResource PhoneFontSizeNormal}"
     SupportedOrientations="Portrait" Orientation="Portrait"
     mc:Ignorable="d" d:DesignHeight="696" d:DesignWidth="480"
-    shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded" Background="#FF211E1D">
+    shell:SystemTray.IsVisible="True" Loaded="PhoneApplicationPage_Loaded" 
+    DataContext="{Binding Main, Source={StaticResource Locator}}" 
+    Background="#FF211E1D">
 
     <toolkit:TransitionService.NavigationInTransition>
         <toolkit:NavigationInTransition>
@@ -63,26 +65,24 @@
         <Grid x:Name="ContentPanel" Grid.Row="1" Margin="12,0,12,0">
             <ScrollViewer>
             <StackPanel>
-                    <TextBlock Text="{Binding Path=Title}" 
+                    <TextBlock
 					Name="TitleNews" Margin="10,0,0,0"
+                       Text="{Binding News.CurrentNews.Title}" 
+                       DataContext="{Binding Main, Source={StaticResource Locator}}" 
 					Style="{StaticResource Text36pxB9A194}" 
 					TextWrapping="Wrap"/>
 
                     <msp:HTMLViewer NavigaionPolitic="Automatic" x:Name="Description"  
-                                    FontSize="24" 
-                                    ScrollViewer.VerticalScrollBarVisibility="Disabled"                
-                                    Foreground="#FF847168" 
-                                    Html="{Binding Path=MediumBody}" 
-                                    HorizontalContentAlignment="Left" />
+                                FontSize="24" 
+                                ScrollViewer.VerticalScrollBarVisibility="Disabled"                
+                                Foreground="#FF847168" 
+                                Html="{Binding Path=News.CurrentNews.MediumBody}" 
+                                DataContext="{Binding Main, Source={StaticResource Locator}}" 
+                                HorizontalContentAlignment="Left" />
                     <TextBlock Text="Читатать дальше" 
 					Name="ReadMore" Margin="10,20,0,0"
 					Style="{StaticResource Text36pxB9A194}" 
 					TextWrapping="Wrap" Tap="ReadMore_Tap" />
-                    <!--<myscroll:ScrollableTextBlock  Text="{Binding Path=Body}"     
-                        Foreground="#FF847168" FontSize="24" Width="450" Height="500"
-                        HorizontalAlignment="Left"  Name="Description" 
-                        VerticalAlignment="Top"/>-->
-
             </StackPanel>
             </ScrollViewer>
         </Grid>
