Stations page - fix

--- a/wp7-donor/Donor/StationsSearch.xaml
+++ b/wp7-donor/Donor/StationsSearch.xaml
@@ -85,7 +85,9 @@
         <ListBox 
 		VerticalAlignment="Top"
 		Margin="0,0,0,0"
-		Name="StationsList" ItemsSource="{Binding Stations.DistanceItems}" 
+		Name="StationsList" 
+        ItemsSource="{Binding Stations.DistanceItems}"
+            
 		SelectionChanged="StationsList_SelectionChanged" Tap="StationsList_Tap">
             <ListBox.ItemTemplate>
                 <DataTemplate>
